--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,8 @@
 <html lang="en" data-theme="" style="--color-hue: fff">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎯</text></svg>">
+		<!-- <link rel="icon" href="%sveltekit.assets%/favicon.svg" /> -->
 		<script
 			defer
 			data-domain="nicebuttons.com"
