--- a/src/app.html
+++ b/src/app.html
@@ -2,13 +2,12 @@
 <html lang="en" data-theme="" style="--color-hue: fff">
 	<head>
 		<meta charset="utf-8" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎯</text></svg>">
+		<link
+			rel="icon"
+			href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎯</text></svg>"
+		/>
 		<!-- <link rel="icon" href="%sveltekit.assets%/favicon.svg" /> -->
-		<script
-			defer
-			data-domain="nicebuttons.com"
-			src="https://winken.io/js/script.tagged-events.js"
-		></script>
+		<script defer data-domain="zaki.gg" src="https://winken.io/js/script.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
