update tracking url

--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,11 @@
 			href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎯</text></svg>"
 		/>
 		<!-- <link rel="icon" href="%sveltekit.assets%/favicon.svg" /> -->
-		<script defer data-domain="zaki.gg" src="https://winken.io/js/script.js"></script>
+		<script
+			defer
+			src="https://crdif.com/script.js"
+			data-website-id="d6215ab0-c4ac-44fb-beaf-b9c5c2265a64"
+		></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
