--- a/src/app.html
+++ b/src/app.html
@@ -9,8 +9,8 @@
 		<!-- <link rel="icon" href="%sveltekit.assets%/favicon.svg" /> -->
 		<script
 			defer
-			src="https://crdif.com/script.js"
-			data-website-id="d6215ab0-c4ac-44fb-beaf-b9c5c2265a64"
+			src="https://zaki.click/script.js"
+			data-website-id="85a5ee22-7447-457b-851b-06beaff3aeab"
 		></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
